--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,8 +25,8 @@ if (flutterVersionName == null) {
 android {
     namespace "com.example.sipaias_fun_mobile"
     compileSdkVersion 34
-    ndkVersion flutter.ndkVersion
-
+    ndkVersion "25.1.8937393"
+    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
